tests/base/parser/bad/lib/lmodule-library-cid-let-with.scillib
scilla_version 0

library TestLib

(* missing some constant name *)
let = True
